--- a/src/Component/Footer/footer.css
+++ b/src/Component/Footer/footer.css
@@ -1,4 +1,10 @@
 .Footer {
     display: flex;
     justify-content: center;
+    padding-top: 10vh;
 }
+
+.Footer img {
+    height: 10vh;
+    max-height:348px;
+ }
