--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,153 @@
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville&family=Raleway:wght@400;700&display=swap");
+
+:root {
+  --main-background-color: #fff;
+  --main-style-color: #ff3541;
+  --primary-type-color: #111;
+  --secondary-type-color: #fff;
+  font-size: 2vh;
+}
+
 body {
+  background: var(--main-background-color);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Raleway";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-/* feel free to change any of this. */
-
-.Navigation {
-  display: flex;
-  justify-content: center;
-  list-style: none;
-
-}
-
-/* a's are basically the Link element inside the List item */
 a {
-  padding-right: 10px;
+  color: var(--primary-type-color);
+  text-decoration: none;
+}
+
+.mainText {
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
+.accentTextOne {
+  font-size: 1rem;
+  font-family: 'Libre Baskerville', serif;
+}
+
+.accentTextTwo {
+  font-size: 1.1rem;
+  font-family: 'Abril Fatface', cursive;
+}
+
+.allCaps {
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+
+.redText {
+  color: #ff3541;
+}
+
+ul, li {
+  list-style: none;
+  margin: auto;
+  padding: 0;
+}
+
+#nav {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  font-size: 8vh;
+  font-weight: 700;
+  text-align: center;
+  line-height: 17vh;
+  color: var(--secondary-type-color);
+  background: var(--main-style-color);
+  transform-origin: bottom;
+  transition: all .5s linear;
+}
+
+#nav a {
+  color: var(--secondary-type-color);
+  text-decoration: none;
+}
+
+.closeNav {
+  height: 0;
+}
+
+.openNav {
+  height: 70vh;
+}
+
+#navButton {
+  cursor: pointer;
+  z-index: 10;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+#navButton input {
+  display: none;
+}
+
+#navButton input + span {
+  --navbutton-size: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  padding: 3px;
+  margin: auto;
+  width: var(--navbutton-size);
+  height: var(--navbutton-size);
+  color: var(--main-background-color);
+  text-align: center;
+  background: var(--main-style-color);
+  box-shadow: 0px 10px 28px -8px rgba(0, 0, 0, 0.75);
+  transition: all .5s ease;
+}
+
+#navButton input + span:active {
+  transform: scale(0.9);
+}
+
+#navButton input + span div {
+  width: 40px;
+  height: 6px;
+  margin: auto;
+  background: var(--main-background-color);
+  text-align: center;
+}
+
+#navButton input:checked + span {
+  background: var(--main-background-color);
+  color: var(--main-style-color);
+}
+
+#navButton input:checked + span:active {
+  transform: scale(0.9);
+}
+
+#navButton input:checked + span div {
+  background: var(--main-style-color);
+}
+
+@media (min-device-width:1224px) {
+
+  #nav {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 30vw;
+    min-width: 500px;
+    height: 5vh;
+    margin: 5vh auto 5vh auto;
+    text-align: center;
+    font-size: 0.8rem;
+    line-height: 1rem;
+    box-shadow: 0px 8px 20px -8px rgba(0, 0, 0, 0.5);
+  }
+
+  #navButton {
+    display: none;
+  }
+
 }
