--- a/src/Component/Footer/footer.css
+++ b/src/Component/Footer/footer.css
@@ -1,7 +1,10 @@
 .Footer {
     display: flex;
     justify-content: center;
-    padding-top: 10vh;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .Footer img {
