--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,7 @@ ul, li {
     text-align: center;
     font-size: 0.8rem;
     line-height: 1rem;
-    box-shadow: 0px 8px 20px -8px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 8px 20px -8px rgba(0, 0, 0, 0.5);
   }
 
   #navButton {
@@ -182,7 +182,7 @@ ul, li {
     text-align: center;
     color: var(--main-background-color);
     background-color: var(--main-style-color);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: transform .3s ease;
   }
@@ -200,8 +200,13 @@ ul, li {
     transition: all .3s ease;
   }
 
-  #social #socialButton:active {
-    transform: scale(0.8);
+  #social #socialButton:active, #social.socialClick #socialButton:active {
+    transform: scale(1.2);
+  }
+
+  #social.socialClick #socialButton {
+    transform: rotateY(180deg);
+    box-shadow: 0 8px 20px -8px rgba(0, 0, 0, 0.8);
   }
 
   #social.socialClick #socialIcons {
@@ -209,36 +214,35 @@ ul, li {
     height: 8rem;
   }
 
-  #social.socialClick #socialButton:active {
-    transform: scale(1.2);
-  }
-
-  #social.socialClick #socialButton {
-    transform: rotate(45deg);
-    box-shadow: 0 8px 20px -8px rgba(0, 0, 0, 0.8);
-  }
-
   #social img {
-    z-index: 10;
     position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
     margin: auto;
     width: 1.3rem;
-    transition: transform .3s ease, background .2s ease;
+    transition: transform .3s ease;
+  }
+
+  #social #socialButton img {
+    width: 1rem;
+  }
+
+  #social #socialIcons img {
+    border-radius: 50%;
+    box-shadow: 0 8px 20px -8px rgba(0, 0, 0, 0.8);
   }
 
   #social.socialClick img {
     transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
-  /*facebook*/
+  /* github (change to instagram) */
   #social.socialClick .iconOne {
     transform: translate(.3rem, 2.8rem);
   }
-  /*twitter*/
+  /* twitter */
   #social.socialClick .iconTwo {
     transform: translate(-2rem, 2rem);
   }
-  /*google*/
+  /* facebook */
   #social.socialClick .iconThree {
     transform: translate(-2.8rem, -.3rem);
   }
