--- a/src/Component/Footer/footer.css
+++ b/src/Component/Footer/footer.css
@@ -1,10 +1,7 @@
 .Footer {
     display: flex;
     justify-content: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    padding-top: 10vh;
 }
 
 .Footer img {
