--- a/src/Component/Portfolio/portfolio.css
+++ b/src/Component/Portfolio/portfolio.css
@@ -1,4 +1,60 @@
 .Portfolio {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+}
+
+h1 {
+    font-weight: 200;
+    text-align: center;
+    margin-bottom: 5vh;
+}
+
+.portfolioBlock {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    min-height: 50vh;
+}
+
+.portfolioPage {
+    width: 90vw;
+    margin-bottom: 5vh;
+}
+
+.portfolioBlock img {
+    width: 90vw;
+    box-shadow: 0 8px 20px -8px rgba(0, 0, 0, 0.5);
+}
+
+@media (min-device-width:1224px) {
+
+    h1 {
+        margin-top: 5vh;
+        margin-bottom: 0;
+    }
+
+    .portfolioBlock {
+        flex-direction: row;
+    }
+
+    .portfolioPage {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 28vw;
+        height: 28vw;
+    }
+
+    .portfolioBlock img {
+        width: 28vw;
+        transition: all 0.5s ease;
+    }
+
+    .portfolioBlock img:hover {
+        transform: scale(1.05);
+    }
+
 }
