--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville&family=Raleway:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville&family=Raleway:wght@200;400;700&display=swap");
 
 @font-face {
   font-family: "Elephant";
@@ -78,7 +78,7 @@ ul, li {
   text-align: center;
   line-height: 17vh;
   color: var(--secondary-type-color);
-  background: var(--main-style-color);
+  background-color: var(--main-style-color);
   transform-origin: bottom;
   transition: all .5s linear;
 }
@@ -99,7 +99,7 @@ ul, li {
 #navButton {
   cursor: pointer;
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 20px;
   right: 20px;
 }
@@ -120,7 +120,7 @@ ul, li {
   height: var(--navbutton-size);
   color: var(--main-background-color);
   text-align: center;
-  background: var(--main-style-color);
+  background-color: var(--main-style-color);
   box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
   transition: all .5s ease;
 }
@@ -133,12 +133,12 @@ ul, li {
   width: 40px;
   height: 6px;
   margin: auto;
-  background: var(--main-background-color);
+  background-color: var(--main-background-color);
   text-align: center;
 }
 
 #navButton input:checked + span {
-  background: var(--main-background-color);
+  background-color: var(--main-background-color);
   color: var(--main-style-color);
 }
 
@@ -147,7 +147,7 @@ ul, li {
 }
 
 #navButton input:checked + span div {
-  background: var(--main-style-color);
+  background-color: var(--main-style-color);
 }
 
 @media (min-device-width:1224px) {
@@ -162,11 +162,23 @@ ul, li {
     margin: 5vh auto 5vh auto;
     text-align: center;
     font-size: 0.8rem;
-    line-height: 1rem;
     box-shadow: 0 8px 20px -8px rgba(0, 0, 0, 0.5);
+  }
+
+  #nav div {
+    width: 7.5vw;
+    min-width: 125px;
+    height: 5vh;
+    line-height: 5vh;
+  }
+
+  #nav div:hover {
+    background-color: #ff737a;
+    transition: background-color 0.5s;
   }
 
   #navButton {
     display: none;
   }
+
 }
