--- a/src/Component/CaseStudy/caseStudy.css
+++ b/src/Component/CaseStudy/caseStudy.css
@@ -6,16 +6,19 @@
 
 .CaseBase {
     z-index: 201;
+    opacity: 0;
     position: fixed;
     width: 100vw;
     height: 100vh;
     top: 0;
     margin: auto;
     background-color: rgba(0,0,0,0.7);
+    transition: opacity 0.8s;
 }
 
 .CaseWindow {
     z-index: 202;
+    opacity: 0;
     position: fixed;
     width: 80vw;
     height: 80vh;
@@ -31,8 +34,17 @@
     background-color: rgba(250,250,250,0.7);
     border-radius: 10vh;
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+    transition: opacity 0.8s;
 }
 
 .openCaseStudy {
     display: block;
+}
+
+.viewCaseStudy {
+    opacity: 1;
+}
+
+.CaseClosed {
+    display: none;
 }
