--- a/src/Component/CaseStudy/caseStudy.css
+++ b/src/Component/CaseStudy/caseStudy.css
@@ -12,7 +12,7 @@
     height: 100vh;
     top: 0;
     margin: auto;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(100,100,100,0.9);
     transition: opacity 0.8s;
 }
 
@@ -20,21 +20,37 @@
     z-index: 202;
     opacity: 0;
     position: fixed;
-    width: 80vw;
-    height: 80vh;
+    width: 97vw;
+    height: 97vh;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
-    font-size: 5rem;
-    text-align: center;
+    font-size: 2rem;
     color: var(--primary-type-color);
-    line-height: 90vh;
-    background-color: rgba(250,250,250,0.7);
-    border-radius: 10vh;
+    background-color: rgba(250,250,250,0.8);
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
     transition: opacity 0.8s;
+}
+
+.exitCaseStudy {
+    cursor: pointer;
+    position: absolute;
+    min-width: 30px;
+    min-height: 30px;
+    top: 10px;
+    right: 10px;
+    color: var(--primary-type-color);
+    font-size: 40px;
+    font-weight: 200;
+    line-height: 30px;
+    text-align: center;
+    background-color: rgba(250,250,250,0.8);
+    box-shadow: 10px 10px 20px -8px rgba(0, 0, 0, 1);
+    border: 1px solid #111111;
+    border-radius: 100%;
+    transform: rotate(45deg);
 }
 
 .openCaseStudy {
@@ -45,6 +61,26 @@
     opacity: 1;
 }
 
+.CaseOpen {
+    display: block;
+}
+
 .CaseClosed {
     display: none;
+}
+
+
+@media (min-device-width:1224px) {
+
+    .CaseWindow {
+        width: 80vw;
+        height: 80vh;
+        border-top-right-radius: 10vh;
+    }
+
+    .exitCaseStudy {
+        top: 0;
+        right: 0;
+    }
+
 }
