--- a/src/Component/Portfolio/CaseStudy/caseStudy.css
+++ b/src/Component/Portfolio/CaseStudy/caseStudy.css
@@ -9,7 +9,7 @@
     opacity: 0;
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     top: 0;
     margin: auto;
     background-color: rgba(100,100,100,0.9);
@@ -19,34 +19,81 @@
 .CaseWindow {
     z-index: 202;
     opacity: 0;
-    position: fixed;
-    width: 97vw;
-    height: 97vh;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
-    font-size: 2rem;
-    text-align: center;
-    line-height: 70vh;
-    color: var(--primary-type-color);
-    background-color: rgba(250,250,250,0.8);
-    box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
     transition: opacity 0.8s;
 }
 
+.CaseFile {
+    position: absolute;
+    width: 100%;
+    top: 0;
+}
+
+.CaseTitle {
+    position: relative;
+    width: 100%;
+    top: 8vh;
+    margin: auto;
+    box-sizing: border-box;
+    padding: 0 3rem 0 1rem;
+    font-size: 1.4rem;
+    line-height: 4rem;
+    color: var(--primary-type-color);
+    background-color: rgba(250,250,250,0.8);
+    box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+}
+
+.CaseImg {
+    position: relative;
+    width: 100%;
+    top: 1vh;
+    color: var(--primary-type-color);
+    background-color: rgba(250,250,250,0.8);
+    box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+}
+
+.CaseImg img {
+    position: absolute;
+    width: 90vw;
+    top: 0; bottom: 0; left: 0; right: 0;
+    margin: auto;
+    color: var(--primary-type-color);
+    background-color: rgba(250,250,250,0.8);
+    box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+}
+
+.CaseDesc {
+    position: relative;
+    width: 100%;
+    top: 1vh;
+    box-sizing: border-box;
+    padding: 0 1rem 0 1rem;
+    font-size: 1.2rem;
+    line-height: 4rem;
+    color: var(--primary-type-color);
+    background-color: rgba(250,250,250,0.8);
+    box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+}
+
 .exitCaseStudy {
+    z-index: 500;
     cursor: pointer;
     position: absolute;
-    min-width: 30px;
-    min-height: 30px;
-    top: 10px;
-    right: 10px;
+    width: 4vh;
+    height: 4vh;
+    top: 1vh;
+    right: 1vh;
     color: var(--primary-type-color);
-    font-size: 40px;
+    font-size: 8vh;
     font-weight: 200;
-    line-height: 30px;
+    line-height: 4vh;
     text-align: center;
     background-color: rgba(250,250,250,0.8);
     box-shadow: 10px 10px 20px -8px rgba(0, 0, 0, 1);
@@ -67,11 +114,42 @@
     opacity: 1;
 }
 
-@media (min-device-width:1224px) {
+@media (min-width:1224px) {
 
     .CaseWindow {
-        width: 80vw;
+        position: fixed;
+        width: 90vw;
+        height: 90vh;
+        overflow: visible;
+    }
+
+    .CaseTitle {
+        position: absolute;
+        width: auto;
+        top: 0;
+        left: 0;
+        border-top-right-radius: 10vh;
+    }
+
+    .CaseImg {
+        position: absolute;
+        width: 48vw;
         height: 80vh;
+        top: 8vh;
+        right: 0;
+        border-top-left-radius: 10vh;
+    }
+
+    .CaseImg img {
+        width: 40vw;
+    }
+
+    .CaseDesc {
+        position: absolute;
+        width: 40.5vw;
+        height: 78vh;
+        top: 10vh;
+        left: 0;
         border-top-right-radius: 10vh;
     }
 
