--- a/src/Component/Portfolio/CaseStudy/caseStudy.css
+++ b/src/Component/Portfolio/CaseStudy/caseStudy.css
@@ -13,7 +13,7 @@
     top: 0;
     margin: auto;
     background-color: rgba(100,100,100,0.9);
-    transition: opacity 0.8s;
+    transition: opacity 0.3s;
 }
 
 .CaseWindow {
@@ -27,40 +27,45 @@
     left: 0;
     right: 0;
     margin: auto;
-    transition: opacity 0.8s;
+    transition: opacity 0.6s;
 }
 
 .CaseFile {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     position: absolute;
     width: 100%;
+    min-height: 100vh;
     top: 0;
+    margin: auto;
 }
 
 .CaseTitle {
-    position: relative;
     width: 100%;
-    top: 8vh;
-    margin: auto;
     box-sizing: border-box;
     padding: 0 3rem 0 1rem;
+    margin: 7vh 0 2vh 0;
     font-size: 1.4rem;
     line-height: 4rem;
-    color: var(--primary-type-color);
-    background-color: rgba(250,250,250,0.8);
+    color: var(--secondary-type-color);
+    background-color: var(--main-style-color);
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
 }
 
 .CaseImg {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 100%;
-    top: 1vh;
+    margin-bottom: 2vh;
+    padding: 1rem 0 1rem 0;
     color: var(--primary-type-color);
     background-color: rgba(250,250,250,0.8);
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
 }
 
 .CaseImg img {
-    position: absolute;
     width: 90vw;
     top: 0; bottom: 0; left: 0; right: 0;
     margin: auto;
@@ -70,13 +75,12 @@
 }
 
 .CaseDesc {
-    position: relative;
     width: 100%;
-    top: 1vh;
+    margin-bottom: 2vh;
     box-sizing: border-box;
-    padding: 0 1rem 0 1rem;
+    padding: 1rem;
     font-size: 1.2rem;
-    line-height: 4rem;
+    line-height: 2rem;
     color: var(--primary-type-color);
     background-color: rgba(250,250,250,0.8);
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
@@ -123,11 +127,16 @@
         overflow: visible;
     }
 
+    .CaseFile {
+        display: block;
+    }
+
     .CaseTitle {
         position: absolute;
         width: auto;
         top: 0;
         left: 0;
+        margin: 0;
         border-top-right-radius: 10vh;
     }
 
@@ -137,6 +146,8 @@
         height: 80vh;
         top: 8vh;
         right: 0;
+        margin: 0;
+        padding: 0;
         border-top-left-radius: 10vh;
     }
 
@@ -150,6 +161,7 @@
         height: 78vh;
         top: 10vh;
         left: 0;
+        margin: 0;
         border-top-right-radius: 10vh;
     }
 
