--- a/src/Component/Portfolio/CaseStudy/caseStudy.css
+++ b/src/Component/Portfolio/CaseStudy/caseStudy.css
@@ -36,7 +36,7 @@
     justify-content: flex-start;
     position: absolute;
     width: 100%;
-    min-height: 100vh;
+    min-height: 90vh;
     top: 0;
     margin: auto;
 }
@@ -53,31 +53,30 @@
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
 }
 
-.CaseImg {
+.CaseDeskImg {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     margin-bottom: 2vh;
-    padding: 1rem 0 1rem 0;
     color: var(--primary-type-color);
-    background-color: var(--main-background-color);
+}
+
+.CaseDeskImg img {
+    width: 100%;
+    margin: auto;
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
 }
 
-.CaseImg img {
-    width: 90vw;
-    top: 0; bottom: 0; left: 0; right: 0;
-    margin: auto;
-    color: var(--primary-type-color);
-    box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+.CaseMobImg, .mobDesk {
+    display: none;
 }
 
 .CaseDesc {
     width: 100%;
     margin-bottom: 2vh;
     box-sizing: border-box;
-    padding: 1rem;
+    padding: 2vh;
     font-size: 1.2rem;
     line-height: 2rem;
     color: var(--primary-type-color);
@@ -134,36 +133,60 @@
 
     .CaseTitle {
         position: absolute;
-        width: auto;
+        width: 40.5vw;
         top: 0;
         left: 0;
         margin: 0;
         border-top-right-radius: 10vh;
     }
 
-    .CaseImg {
+    .CaseDeskImg {
         position: absolute;
-        width: 48vw;
-        height: 80vh;
-        top: 8vh;
+        width: 40vw;
+        top: 15vh;
         right: 0;
         margin: 0;
         padding: 0;
-        border-top-left-radius: 10vh;
     }
 
-    .CaseImg img {
+    .CaseDeskImg img {
         width: 40vw;
+    }
+
+    .CaseMobImg {
+        display: block;
+        position: absolute;
+        width: 14vw;
+        bottom: 0;
+        left: 38vw;
+        margin: auto;
+        padding: 0;
+    }
+
+    .CaseMobImg img {
+        width: 14vw;
+        box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+    }
+
+    .mobDesk {
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+        padding: 1vh;
+        color: var(--secondary-type-color);
+        background-color: var(--main-style-color);
+        box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+        border-top-right-radius: 10vh;
     }
 
     .CaseDesc {
         position: absolute;
         width: 40.5vw;
-        height: 78vh;
-        top: 10vh;
+        top: 8vh;
         left: 0;
         margin: 0;
-        border-top-right-radius: 10vh;
+        padding: 2vh 4vh 6vh 3vh;
+        border-bottom-right-radius: 10vh;
     }
 
     .exitCaseStudy {
