--- a/src/Component/Portfolio/portfolio.css
+++ b/src/Component/Portfolio/portfolio.css
@@ -73,4 +73,24 @@ h1 {
         width: 28vw;
     }
 
+    .casePrevNext {
+        z-index: 500;
+        display: block;
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        top: 0; bottom: 0;
+        margin: auto;
+        background: greenyellow;
+        border-radius: 100%;
+    }
+
+    .nextCase {
+        right: 0;
+    }
+
+    .prevCase {
+        left: 0;
+    }
+
 }
