Flesh out About & Contact; move CSS

--- a/src/Component/About/about.css
+++ b/src/Component/About/about.css
@@ -1,4 +1,11 @@
 .About {
-    display: flex;
-    justify-content: center;
+
+}
+
+@media (min-device-width:1224px) {
+
+    .About {
+
+    }
+
 }
