--- a/src/Component/Contact/contact.css
+++ b/src/Component/Contact/contact.css
@@ -1,4 +1,7 @@
 .Contact {
+    min-height: 50vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    text-align: center;
 }
