Adding about stuff, modify buttons

--- a/src/Component/About/about.css
+++ b/src/Component/About/about.css
@@ -2,10 +2,32 @@
 
 }
 
+.aboutPics {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.aboutPics img {
+    width: 80vw;
+    margin: 4vh auto 4vh auto;
+    border-radius: 100%;
+}
+
 @media (min-device-width:1224px) {
 
     .About {
 
+    }
+
+    .aboutPics {
+        flex-direction: row;
+        margin: 8vh auto 8vh auto;
+    }
+
+    .aboutPics img {
+        width: 20vw;
+        margin: auto;
     }
 
 }
