--- a/src/Component/Portfolio/CaseStudy/caseStudy.css
+++ b/src/Component/Portfolio/CaseStudy/caseStudy.css
@@ -47,9 +47,9 @@
     padding: 0 3rem 0 1rem;
     margin: 8vh 0 2vh 0;
     font-size: 1.4rem;
-    line-height: 4rem;
+    line-height: 3rem;
     color: var(--secondary-type-color);
-    background: var(--main-style-color) url("../../../Assets/swish/swish1.png") no-repeat left center/3git status0%;
+    background-color: var(--main-style-color);
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
 }
 
@@ -119,6 +119,8 @@
         top: 0;
         left: 0;
         margin: 0;
+        text-indent: 3vh;
+        background: var(--main-style-color) url("../../../Assets/swish/plus.png") no-repeat left center/contain;
         border-top-right-radius: 10vh;
     }
 
@@ -128,7 +130,6 @@
         top: 15vh;
         right: 0;
         margin: 0;
-        padding: 0;
     }
 
     .CaseDeskImg img {
@@ -136,13 +137,12 @@
     }
 
     .CaseMobImg {
-        display: block;
         position: absolute;
+        display: block;
         width: 14vw;
         bottom: 0;
         left: 39vw;
         margin: auto;
-        padding: 0;
     }
 
     .CaseMobImg img {
@@ -157,7 +157,8 @@
         box-sizing: border-box;
         padding: 1vh;
         color: var(--secondary-type-color);
-        background-color: var(--main-style-color);
+        text-indent: 3vh;
+        background: var(--main-style-color) url("../../../Assets/swish/plus.png") no-repeat left center/contain;
         box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
         border-top-right-radius: 10vh;
     }
@@ -165,7 +166,7 @@
     .CaseDesc {
         position: absolute;
         width: 40.5vw;
-        top: 8vh;
+        top: 6vh;
         left: 0;
         margin: 0;
         padding: 2vh 4vh 6vh 3vh;
