--- a/src/Component/Portfolio/CaseStudy/caseStudy.css
+++ b/src/Component/Portfolio/CaseStudy/caseStudy.css
@@ -36,7 +36,7 @@
     justify-content: flex-start;
     position: absolute;
     width: 100%;
-    min-height: 90vh;
+    height: 90vh;
     top: 0;
     margin: auto;
 }
@@ -45,9 +45,10 @@
     width: 100%;
     box-sizing: border-box;
     padding: 0 3rem 0 1rem;
-    margin: 8vh 0 2vh 0;
-    font-size: 1.4rem;
-    line-height: 3rem;
+    margin: 9vh 0 2vh 0;
+    font-size: 1.2rem;
+    line-height: 2.5rem;
+    text-transform: uppercase;
     color: var(--secondary-type-color);
     background-color: var(--main-style-color);
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
@@ -77,7 +78,6 @@
     margin-bottom: 2vh;
     box-sizing: border-box;
     padding: 2vh;
-    font-size: 1.2rem;
     line-height: 2rem;
     color: var(--primary-type-color);
     background-color: var(--main-background-color);
@@ -156,8 +156,10 @@
         width: 100%;
         box-sizing: border-box;
         padding: 1vh;
+        font-size: 0.8rem;
         color: var(--secondary-type-color);
         text-indent: 3vh;
+        text-transform: uppercase;
         background: var(--main-style-color) url("../../../Assets/swish/plus.png") no-repeat left center/contain;
         box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
         border-top-right-radius: 10vh;
@@ -166,7 +168,7 @@
     .CaseDesc {
         position: absolute;
         width: 40.5vw;
-        top: 6vh;
+        top: 5vh;
         left: 0;
         margin: 0;
         padding: 2vh 4vh 6vh 3vh;
