--- a/src/Component/Portfolio/portfolio.css
+++ b/src/Component/Portfolio/portfolio.css
@@ -46,8 +46,7 @@
     height: 6vh;
     color: var(--secondary-type-color);
     text-align: center;
-    background-color: #292224;
-    box-shadow: 10px 10px 20px -8px rgba(0, 0, 0, 0.8);
+    background-color: var(--main-style-color);
     border-radius: 100%;
 }
 
@@ -59,6 +58,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--main-style-color);
+    box-shadow: 10px 10px 20px -8px rgba(0, 0, 0, 0.8);
     border-radius: 100%;
     transition: all 0.5s ease;
 }
