--- a/src/index.css
+++ b/src/index.css
@@ -181,30 +181,11 @@ ul, li {
   }
 
   #nav div:hover {
-    transform: translateX(-8px) translateY(-8px);
-    box-shadow:
-      1px 1px #292224,
-      2px 2px #292224,
-      3px 3px #292224,
-      4px 4px #292224,
-      5px 5px #292224,
-      6px 6px #292224,
-      7px 7px #292224,
-      8px 8px #292224;
+    background-color: #e4303b;
   }
 
   #nav div:active {
-    transform: translateX(-4px) translateY(-4px);
-    box-shadow:
-            0px 0px #533c44,
-            1px 1px #533c44,
-            1.5px 1.5px #533c44,
-            2px 2px #533c44,
-            2.5px 2.5px #533c44,
-            3px 3px #533c44,
-            3.5px 3.5px #533c44,
-            4px 4px #533c44;
-    transition: all 0.1s ease;
+    background-color: var(--main-style-color);
   }
 
   #navButton {
