--- a/src/Component/Portfolio/CaseStudy/caseStudy.css
+++ b/src/Component/Portfolio/CaseStudy/caseStudy.css
@@ -77,11 +77,21 @@
     width: 100%;
     margin-bottom: 2vh;
     box-sizing: border-box;
-    padding: 2vh;
-    line-height: 2rem;
+    line-height: 1.5rem;
     color: var(--primary-type-color);
     background-color: var(--main-background-color);
     box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
+}
+
+.CaseAddress {
+    width: 100%;
+    text-align: center;
+    line-height: 2rem;
+    background-color: var(--main-style-color);
+}
+
+.CaseAddress a {
+    color: var(--secondary-type-color);
 }
 
 .caseOpen {
@@ -134,6 +144,8 @@
 
     .CaseDeskImg img {
         width: 46vw;
+        box-sizing: border-box;
+        border-left: 4px solid var(--main-style-color);
     }
 
     .CaseMobImg {
@@ -147,6 +159,8 @@
 
     .CaseMobImg img {
         width: 14vw;
+        box-sizing: border-box;
+        border-left: 4px solid var(--main-style-color);
         box-shadow: 0 10px 28px -8px rgba(0, 0, 0, 0.75);
     }
 
@@ -172,7 +186,18 @@
         left: 0;
         margin: 0;
         padding: 2vh 4vh 6vh 3vh;
-        border-bottom-right-radius: 10vh;
+        border-left: 4px solid var(--main-style-color);
+    }
+
+    .CaseAddress {
+        position: absolute;
+        width: auto;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0;
+        padding: 0 2vh 0 2vh;
+        border-right: 4px solid var(--main-style-color);
     }
 
 }
