--- a/src/Component/Portfolio/CaseStudy/caseStudy.css
+++ b/src/Component/Portfolio/CaseStudy/caseStudy.css
@@ -1,10 +1,9 @@
-.CaseStudy {
-    z-index: 200;
+.CaseStudyContainer {
     display: none;
-    transition: opacity 1s;
+    z-index: 200;
 }
 
-.CaseBase {
+.CaseStudyBase {
     z-index: 201;
     opacity: 0;
     position: fixed;
@@ -16,7 +15,7 @@
     transition: opacity 0.3s;
 }
 
-.CaseWindow {
+.CaseStudyWindow {
     z-index: 202;
     opacity: 0;
     position: absolute;
@@ -98,6 +97,64 @@
     color: var(--secondary-type-color);
 }
 
+/* exit, prev, next basic styling */
+.caseStudyButtons {
+    display: none;
+    z-index: 500;
+    cursor: pointer;
+    position: fixed;
+    width: 6vh;
+    height: 6vh;
+    color: var(--secondary-type-color);
+    text-align: center;
+    background-color: var(--main-style-color);
+    border-radius: 100%;
+}
+
+.caseStudyButtons img {
+    width: 100%;
+}
+
+.caseStudyButtons div {
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-style-color);
+    box-shadow: 10px 10px 20px -8px rgba(0, 0, 0, 0.8);
+    border-radius: 100%;
+    transition: all 0.5s ease;
+}
+
+.caseStudyButtons:hover div {
+    transform: scale(1.1);
+}
+
+.caseStudyButtons:active div {
+    transform: scale(0.9);
+}
+/* other styling for this button on .caseStudyButton */
+.exitCaseStudy {
+    top: 1vh;
+    right: 1vh;
+    font-size: 3.5vh;
+    line-height: 6vh;
+}
+
+.casePrevNext {
+    top: 1vh;
+    margin: auto;
+    font-size: 6vh;
+    font-weight: 700;
+    line-height: 5vh;
+}
+
+.nextCase {
+    left: 8vh;
+}
+
+.prevCase {
+    left: 1vh;
+}
+
 .caseOpen {
     display: block;
 }
@@ -116,7 +173,7 @@
 
 @media (min-width:1224px) {
 
-    .CaseWindow {
+    .CaseStudyWindow {
         position: fixed;
         width: 90vw;
         height: 90vh;
@@ -206,6 +263,28 @@
         margin: 0;
         padding: 0 2vh 0 2vh;
         border-right: 4px solid var(--main-style-color);
+    }
+
+    .caseStudyButtons {
+        position: fixed;
+    }
+
+    .casePrevNext {
+        top: 0; bottom: 0;
+    }
+
+    .nextCase {
+        left: auto;
+        right: 1vh;
+    }
+
+    .exitCaseStudy {
+        width: 4vh;
+        height: 4vh;
+        top: 2vh;
+        right: 2vh;
+        font-size: 3vh;
+        line-height: 4vh;
     }
 
 }
