--- a/src/Component/Services/services.css
+++ b/src/Component/Services/services.css
@@ -28,6 +28,10 @@ h3 {
     width: 80vw;
 }
 
+.galleryfitBase {
+    transition: opacity 0.5s;
+}
+
 @media (min-device-width:1224px) {
 
     .galleryOptions {
