--- a/src/Component/Services/Galleryfit/galleryfit.css
+++ b/src/Component/Services/Galleryfit/galleryfit.css
@@ -1,6 +1,54 @@
+.galleryfitContainer {
+    display: none;
+    z-index: 200;
+}
+
+.galleryfitBase {
+    z-index: 201;
+    opacity: 0;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    margin: auto;
+    background-color: rgba(100,100,100,0.9);
+    transition: opacity 0.3s;
+}
+
+.galleryfitWindow {
+    z-index: 202;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transition: opacity 0.6s;
+}
+
 .Galleryfit {
+    position: absolute;
+    width: 95vw;
+    top: 1vh;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.Galleryfit img {
+    height: 20vh;
 }
 
 @media (min-width:1224px) {
+
+    .galleryfitWindow {
+        position: absolute;
+        width: 80vw;
+    }
+
+    .Galleryfit {
+        width: 80vw;
+    }
 
 }
