--- a/src/Component/Services/Examples/examples.css
+++ b/src/Component/Services/Examples/examples.css
@@ -1,9 +1,9 @@
-.galleryfitContainer {
+.exampleContainer {
     display: none;
     z-index: 200;
 }
 
-.galleryfitBase {
+.exampleBase {
     z-index: 201;
     opacity: 0;
     position: fixed;
@@ -15,7 +15,7 @@
     transition: opacity 0.3s;
 }
 
-.galleryfitWindow {
+.exampleWindow {
     z-index: 202;
     opacity: 0;
     position: absolute;
@@ -27,15 +27,18 @@
     transition: opacity 0.6s;
 }
 
-.Galleryfit {
+.Galleryfit, .Flexi {
+    display: none;
     position: absolute;
     width: 70vw;
-    top: 2vh;
+    top: 0;
     left: 0;
     right: 0;
     margin: auto;
     text-align: center;
     color: var(--secondary-type-color);
+    background-color: #222222;
+    outline: 0.5vh solid #222222;
 }
 
 .galleryPage {
@@ -47,25 +50,28 @@
 }
 
 .galleryPage img {
-    cursor: pointer;
-    height: 97%;
-    border: 1px solid transparent;
-    box-sizing: border-box;
-    box-shadow: 0 8px 14px -7px rgba(0, 0, 0, 0.5);
-    transition: 1s;
-    padding: 0;
+    height: 100%;
+    outline: 0.5vh solid #222222;
 }
 
-.galleryPage img:hover {
-    border: 1px solid #fff;
-    box-shadow: 0 10px 30px -3px rgba(0, 0, 0, 0.65);
+.flexCols {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+}
+
+.flexCols img {
+    height: 15vw;
 }
 
 @media (min-width:1224px) {
 
-    .galleryfitWindow {
-        position: absolute;
-        width: 70vw;
+    .Galleryfit {
+        outline: 0.5vw solid #222222;
+    }
+
+    .galleryPage img {
+        outline: 0.5vw solid #222222;
     }
 
 }
