--- a/src/Component/Services/Examples/examples.css
+++ b/src/Component/Services/Examples/examples.css
@@ -65,9 +65,40 @@
 }
 
 .flexiCols img {
-    width: 16vw;
-    margin-bottom: 1vw;
     box-shadow: 0 8px 14px -7px rgba(0, 0, 0, 0.75);
+}
+
+.sliderContainer {
+    width: 200px;
+    margin: auto;
+}
+
+/* The slider itself */
+.slider {
+    width: 100%;
+    height: 3px;
+    background: var(--main-style-color);
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    width: 15px;
+    height: 15px;
+    background: var(--main-background-color);
+    border-radius: 100%;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    background: var(--main-background-color);
+    border-radius: 100%;
+    cursor: pointer;
 }
 
 @media (min-width:1224px) {
