--- a/src/Component/Services/Examples/examples.css
+++ b/src/Component/Services/Examples/examples.css
@@ -69,46 +69,44 @@
 }
 
 .sliderContainer {
-    width: 200px;
-    margin: auto;
+    display: none;
 }
 
-/* The slider itself */
-.slider {
-    width: 100%;
-    height: 3px;
-    background: var(--main-style-color);
-    transition: opacity .2s;
-}
+@media (min-device-width:1224px) {
 
-.slider:hover {
-    opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-    width: 15px;
-    height: 15px;
-    background: var(--main-background-color);
-    border-radius: 100%;
-    cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-    width: 15px;
-    height: 15px;
-    background: var(--main-background-color);
-    border-radius: 100%;
-    cursor: pointer;
-}
-
-@media (min-width:1224px) {
-
-    .Galleryfit {
-
+    .sliderContainer {
+        display: block;
+        margin: auto;
+        width: 200px;
+        font-size: 0.6rem;
     }
 
-    .galleryPage img {
+    .slider {
+        width: 100%;
+        height: 3px;
+        margin: 20px 0 12px 0;
+        background: var(--main-style-color);
+        transition: opacity .2s;
+    }
 
+    .slider:hover {
+        opacity: 1;
+    }
+
+    .slider::-webkit-slider-thumb {
+        width: 15px;
+        height: 15px;
+        background: var(--main-background-color);
+        border-radius: 100%;
+        cursor: pointer;
+    }
+
+    .slider::-moz-range-thumb {
+        width: 15px;
+        height: 15px;
+        background: var(--main-background-color);
+        border-radius: 100%;
+        cursor: pointer;
     }
 
 }
