--- a/src/index.css
+++ b/src/index.css
@@ -39,14 +39,8 @@ h1 {
 }
 
 h2 {
-  display: inline-block;
   padding: 1vh 2vh 1vh 2vh;
   font-size: 1.3rem;
-  background-color: var(--main-style-color);
-  box-shadow: 0 2px 1px rgba(20,20,20,0.1),
-              0 4px 2px rgba(20,20,20,0.1),
-              0 8px 4px rgba(20,20,20,0.1),
-              0 16px 8px rgba(20,20,20,0.1);
 }
 
 h3 {
@@ -106,6 +100,10 @@ h3 {
   color: #ff3541;
 }
 
+.shadowText {
+  text-shadow:0 2px 1px rgba(0, 0, 0, 0.1), 0 4px 2px rgba(0,0,0,0.1), 0 8px 4px rgba(0,0,0,0.1), 0 16px 8px rgba(0,0,0,0.1);
+}
+
 ul, li {
   list-style: none;
   margin: auto;
@@ -134,6 +132,9 @@ ul, li {
 #nav a {
   color: var(--secondary-type-color);
   text-decoration: none;
+  text-shadow:0 2px 1px rgba(20,20,20,0.1),
+              0 4px 2px rgba(20,20,20,0.1),
+              0 8px 4px rgba(20,20,20,0.1);
 }
 
 .closeNav {
