--- a/src/Component/Services/Examples/examples.css
+++ b/src/Component/Services/Examples/examples.css
@@ -67,8 +67,11 @@
 
 .galleryPage img {
     height: 100%;
-    box-shadow: 0 8px 14px -7px rgba(0, 0, 0, 0.75);
     transition: all 0.5s ease;
+}
+
+.imageShadow {
+    box-shadow: 0 8px 14px -7px rgba(0, 0, 0, 0.75);
 }
 
 .flexiCols {
@@ -148,10 +151,12 @@
 
     .beforeMarker {
         border-left: 5px solid #3cb0ff;
+        box-shadow: -20px 0 0 0 #3cb0ff;
     }
 
     .afterMarker {
         border-right: 5px solid #3cb0ff;
+        box-shadow: 20px 0 0 0 #3cb0ff;
     }
 
     .saveButton {
