--- a/src/Component/Services/services.css
+++ b/src/Component/Services/services.css
@@ -11,16 +11,31 @@ h3 {
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     width: 100vw;
 }
 
 .packagesPage {
-    cursor: pointer;
     width: 90vw;
     min-height: 20vh;
     margin-bottom: 5vh;
-    background-color: var(--main-style-color);
+}
+.packagesTitle {
+    box-sizing: border-box;
+    padding: 1vh;
+    font-size: 0.8rem;
+    color: var(--main-background-color);
+    text-transform: uppercase;
+    text-indent: 3vh;
+    background: var(--main-style-color) url("../../Assets/swish/plus.png") no-repeat left center/contain;
+    border-top-right-radius: 20vh;
+}
+
+.packagesPage div {
+    margin: 1vh 1vh 0 1vh;
+    padding: 1vh;
+    border: 1px solid black;
+    background-color: var(--main-background-color);
 }
 
 .invert {
@@ -69,7 +84,7 @@ h3 {
     .packagesPage {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: flex-start;
         width: 20vw;
     }
 
