Still pushing CSS bits around

--- a/src/Component/Portfolio/portfolio.css
+++ b/src/Component/Portfolio/portfolio.css
@@ -27,7 +27,7 @@
 
 .portfolioBlock img {
     width: 90vw;
-    box-shadow: 0 8px 20px -8px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 6px 4px rgba(0,0,0,0.1), 0 8px 8px rgba(0,0,0,0.1);
 }
 
 @media (min-width:1224px) {
