--- a/src/Component/Services/services.css
+++ b/src/Component/Services/services.css
@@ -5,6 +5,7 @@ h3 {
 
 .packages {
     text-align: center;
+    color: var(--secondary-type-color);
 }
 
 .packagesBlock {
@@ -31,8 +32,8 @@ h3 {
 .packagesPage div {
     margin-bottom: 1px;
     padding: 1vh;
-    background-color: var(--main-background-color);
-    box-shadow: 0 2px 1px rgba(0,0,0,0.1), 0 4px 4px rgba(0,0,0,0.1), 0 8px 6px rgba(0,0,0,0.1);
+    background-color: #222;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 6px 4px rgba(0,0,0,0.1), 0 8px 8px rgba(0,0,0,0.1);
 }
 
 .invert {
@@ -57,7 +58,7 @@ h3 {
     margin-bottom: 2vh;
     padding-bottom: 2vh;
     background-color: #383838;
-    box-shadow: 0 5px 20px 2px rgba(255, 53, 65, 0.75);
+    box-shadow: 0 6px 10px 1px rgba(255, 53, 65, 0.75);
 }
 
 .galleryOptionsContainer p {
